# LearnC

./: CMakeLists.txt
c_android/: CMakeLists.txt  build.sh  build_android.sh  build_ok.sh  clang_ndk_help.txt  gcc_help.txt  main.cpp
c_core_dump/: main.c  test_backtrace_addr2line.c
c_cpp/: CMakeLists.txt
c_cpp/assembly/: CMakeLists.txt  asm_linux_hello_att_build.sh  asm_linux_hello_intel_build.sh  asm_mac_exit_build.sh  asm_mac_first_build.sh  asm_mac_hello_build.sh  linux_hello_att.s  linux_hello_intel.asm  mac_exit.s  mac_first.asm  mac_hello.S  second.asm  test.c  test.s
c_cpp/boost/: CMakeLists.txt  fstream_demo.cpp  mapped_file_demo.cpp
c_cpp/c/: CMakeLists.txt  c_test.c
c_cpp/c/alarm/: alarm_demo.c  alarm_pause.c
c_cpp/c/array/: array_demo.c
c_cpp/c/callback/: callback_demo.c
c_cpp/c/define/: define_demo.c  my_math.h  test.h
c_cpp/c/dlsym/: dlsym_check.c  dlsym_demo.c
c_cpp/c/dlsym/include/: hello.h
c_cpp/c/dlsym/lib/: libhello.dylib
c_cpp/c/error/: error_demo.c
c_cpp/c/exception/: exception_demo.c
c_cpp/c/file/: file_demo.c  file_dup2_demo.c  file_dup_demo.c  file_test.c
c_cpp/c/func_pointer/: func_callback.c  func_point.c
c_cpp/c/http/: http_demo.c
c_cpp/c/http/net/: https_net.cpp  net.cpp  net.h
c_cpp/c/interface/: arith.c  arith.h  ext2_fs.c  ext2_fs.h  fs_interface.h  fs_test.c  mem.h  stack.c  stack.h
c_cpp/c/lib/: CMakeLists.txt  hello.c
c_cpp/c/libs/: string_builder.h
c_cpp/c/mmap/: mmap_demo.c  mmap_demo2.c  mmap_read_write.c  mmap_write_file.c
c_cpp/c/process/: process_demo.c
c_cpp/c/sign/: sign_demo.c  sigsetjmp_siglongjmp_demo.c
c_cpp/c/std/: std_demo.c
c_cpp/c/string/: string_write_file.c
c_cpp/c/thread/: c11_thread_demo.c  c_thread_demo.c
c_cpp/c/union/: union_demo.c
c_cpp/c/va_list/: va_list_demo.c
c_cpp/cpp/: CMakeLists.txt  cpp_test.cpp  main.cpp  test.cpp
c_cpp/cpp/android/: android_sp.cpp
c_cpp/cpp/array/: array_demo.cpp  array_size.cpp
c_cpp/cpp/attribute/: CMakeLists.txt  library.cpp  library.h  library_test.cpp
c_cpp/cpp/c++11/: vector_demo.cpp
c_cpp/cpp/cgi/: cgi_demo.cpp
c_cpp/cpp/constructor/: constructor.cpp  constructor.h
c_cpp/cpp/date/: date_demo  date_demo.cpp
c_cpp/cpp/date/date_demo.dSYM/Contents/: Info.plist
c_cpp/cpp/date/date_demo.dSYM/Contents/Resources/DWARF/: date_demo
c_cpp/cpp/define/: define_demo.cpp  test.p
c_cpp/cpp/dirent/: dirent_demo.cpp
c_cpp/cpp/errno/: errno_demo.cpp
c_cpp/cpp/event/: event_kqueue.cpp  event_pipe.cpp  event_socket_client.cpp  event_socket_server.cpp
c_cpp/cpp/exception/: exception_demo.cpp
c_cpp/cpp/file/: file_demo.cpp
c_cpp/cpp/handler/: handler.cpp  handler_pro.cpp  helloA.h  helloB.h  mysample.h
c_cpp/cpp/macro/: a.out  macro_demo.cpp  macro_pragma.cpp
c_cpp/cpp/memory/: memory_malloc_demo.cpp
c_cpp/cpp/mutex/: my_mutex.cpp  my_mutex.h
c_cpp/cpp/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
c_cpp/cpp/namespace/: namespace_demo.cpp
c_cpp/cpp/point/: point_demo.cpp  point_func.cpp  point_point.cpp  point_point_2.cpp  point_point_array_read.cpp  point_point_array_read_write.cpp  point_point_demo.cpp  point_reference.cpp
c_cpp/cpp/rtp/: simplest_mediadata_udp.cpp
c_cpp/cpp/signal/: signal_backtrace  signal_backtrace.c  signal_catch.c  signal_demo.cpp
c_cpp/cpp/signal/signal_backtrace.dSYM/Contents/: Info.plist
c_cpp/cpp/signal/signal_backtrace.dSYM/Contents/Resources/DWARF/: signal_backtrace
c_cpp/cpp/single_instance/: single.cpp  single_mutex.cpp  single_mutex_smart_point.cpp  single_pro.cpp  single_pro_call_onece.cpp
c_cpp/cpp/smartpoint/: smart_ponit_demo.cpp
c_cpp/cpp/socket/: socket_kqueue_server.cpp  socket_select_client.cpp  socket_select_server.cpp  socket_simple_client.cpp  socket_simple_server.cpp
c_cpp/cpp/stl/: stl_demo.cpp
c_cpp/cpp/strings/: string_demo.cpp
c_cpp/cpp/struct/: struct_demo.cpp
c_cpp/cpp/symbol/: static_cast_demo.cpp
c_cpp/cpp/syscall/: syscall_demo.cpp
c_cpp/cpp/template/: template_class_demo.cpp  template_demo.cpp
c_cpp/cpp/thread/: thread_demo.cpp  thread_std_demo.cpp
c_cpp/cpp/typeof/: typeof_demo.cpp
c_cpp/cpp/version/: my_version.cpp  my_version.h
c_cpp/gtk/: CMakeLists.txt  gtk_demo.c  gtk_ui.c
c_design_patterns/: CMakeLists.txt
c_design_patterns/embedded/: CMakeLists.txt
c_design_patterns/embedded/chap1/: cached_queue.c  cached_queue.h  queue.c  queue.h  sensor.c  sensor.h
c_design_patterns/embedded/chap2/: ArrythmiaDetector.c  ArrythmiaDetector.h  ECGPkg.h  ECG_Module.c  ECG_Module.h  HistogramDisplay.c  HistogramDisplay.h  NotificationHandle.c  NotificationHandle.h  QRSDelector.c  QRSDelector.h  TMDQueue.c  TMDQueue.h  TMDQueue_ob.h  TestBuilder.c  TestBuilder.h  WaveformDisplay.c  WaveformDisplay.h
c_design_patterns/embedded/chap3/: code1.c  code2.c
c_design_patterns/embedded/chap3/HardwareProxy/: HWProxyExample.h  MotorData.h  MotorProxy.c  MotorProxy.h  main.c
c_design_patterns/mode/: CMakeLists.txt
c_design_patterns/mode/combination/: c_combination_mode.c
c_design_patterns/mode/combination/file/: file.c  file.h  file_system_node.h  folder.c  folder.h  main.c
c_design_patterns/mode/single/: c_object.c  c_single.c  cpp_single.cpp
c_project/amhello-1.0/: Makefile  Makefile.in  config.status  configure
c_project/amhello-1.0/src/: Makefile  Makefile.in  hello
c_project/amhello-1.0/src/.deps/: main.Po
c_project/automake_project/: foo.c  foo.h  main.c
